# BlackHole

./: .gitmodules  CMakeLists.txt  README.md
Math/: math.tex
assets/: march.fs  march.vs  symplectic.fs  text.fs  time.fs
assets/gl/: march.fs  quad.fs
include/: camera.hpp  clock.hpp  constants.hpp  game_object.hpp  object.hpp  rgb.hpp  shader.hpp
src/: camera.cpp  clock.cpp  game_object.cpp  main.cpp  object.cpp  shader.cpp
